# cpp_platform

./: CMakeLists.txt  favourite_url.md
src/: demo.cpp  forward.cpp  iostream.cpp  main.cpp  ostream.cpp  template_specialization.cpp  virtual_inheritance.cpp
